--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -5,7 +5,7 @@ custom-foot: js/carousel-js.html
 {%- assign items = site.data[site.metadata] -%}
 <div class="row">
   <div class="col-md-12">
-  {% include index/carousel.html %}
+  {% include feature/timelinejs.html %}
   
   </div>
   <div class="col-md-3">  
